# ChangeLog for dev-python/fiat
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jul 2014; Andrew Reisner <andrew@reisner.co> fiat-1.3.0.ebuild,
  fiat-1.4.0.ebuild:
  Added keyword

*fiat-1.3.0 (15 Jul 2014)
*fiat-1.4.0 (15 Jul 2014)

  15 Jul 2014; Andrew Reisner <andrew@reisner.co> +fiat-1.3.0.ebuild,
  +fiat-1.4.0.ebuild:
  version bump

*fiat-1.1 (13 Jun 2013)

  13 Jun 2013; Justin Lecher <jlec@gentoo.org> -fiat-0.9.2.ebuild,
  +fiat-1.1.ebuild, metadata.xml:
  Version Bump; Bump to EAPI=5 and distutils-r1.eclass

*fiat-0.9.2 (14 Dec 2010)

  14 Dec 2010; Nico Schlömer <nico.schloemer@gmail.com> +fiat-0.9.2.ebuild,
  +metadata.xml:
  Initial import.