@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/fiat
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  dev-python/fiat: Add bitbucket to remote-id in metadata.xml
 
   16 Jul 2014; Andrew Reisner <andrew@reisner.co> fiat-1.3.0.ebuild,
   fiat-1.4.0.ebuild:
